--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.poniperro</groupId>
-    <artifactId>galley-grub</artifactId>
+    <artifactId>galleygrub</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -12,7 +12,7 @@
     <url>https://www.github.com/stonarini/galley-grub</url>
 
     <properties>
-        <main.class>galley-grub.App</main.class>
+        <main.class>galleygrub.App</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
