--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <url>https://www.github.com/stonarini/galley-grub</url>
 
     <properties>
-        <main.class>galleygrub.App</main.class>
+        <main.class>App</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -92,7 +92,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>edu.poniperro.${main.class}</mainClass>
+                                <mainClass>edu.poniperro.galleygrub.${main.class}</mainClass>
                                 <!-- https://maven.apache.org/shared/maven-archiver/examples/manifest.html -->
                                 <!-- addDefaultImplementationEntries bool -->
                                 <!-- addDefaultSpecificationEntries bool -->
